5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1585_2895.log
== TEST (2019-03-25 13:13:25) 
-- CODE:
var = input("quantidade")
total = float(int(var * 100 + 40))
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = float(int(var * 100 + 40))
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:15:29) 
-- CODE:
var = input("quantidade")
float(100)
int(40)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = float(int(var * 100 + 40))
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:15:47) 
-- CODE:
var = input("quantidade")
float(100)
int(40)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = float(int(var * 100 + 40))
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:19:55) 
-- CODE:
var = input("quantidade")
float(int(a = 100))
float(int(b = 40))
total= var * a + b
print(total)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    float(int(a = 100))
TypeError: 'a' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:21:02) 
-- CODE:
var = input("quantidade")
var = float(int("a"))
var = float(int("b"))
total= var * a + b
print(total)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var = float(int("a"))
ValueError: invalid literal for int() with base 10: 'a'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:22:22) 
-- CODE:
var = input("quantidade")
float(int(100))
float(int(40))
total= var * 100 + 40
print(total)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= var * 100 + 40
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:22:55) 
-- CODE:
var = input("quantidade")
float(int(100))
float(int(40))
total= (var * 100) + 40
print(total)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= (var * 100) + 40
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:23:05) 
-- CODE:
var = input("quantidade")
float(int(100))
float(int(40))
total = (var * 100) + 40
print(total)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = (var * 100) + 40
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:27:39) 
-- CODE:
var = input("quantidade")
float(A = 100)
float(B = 40)
total = int((var * 100) + 40)
print(total)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    float(A = 100)
TypeError: 'A' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:28:21) 
-- CODE:
var = input("quantidade")
float(A = 100)
float(B = 40)
total = int((var * A) + B)
print(total)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    float(A = 100)
TypeError: 'A' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:28:46) 
-- CODE:
var = input("quantidade")
float(A=100)
float(B=40)
total = int((var * A) + B)
print(total)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    float(A=100)
TypeError: 'A' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:29:12) 
-- CODE:
var = input("quantidade")
float(A)
float(B)
total = int((var * A) + B)
print(total)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    float(A)
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:29:45) 
-- CODE:
var = input("quantidade")
float(100)
float(40)
total = int((var * A) + B)
print(total)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = int((var * A) + B)
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:30:11) 
-- CODE:
var = input("quantidade")
float(100)
float(40)
total = int((var * 100) + 40)
print(total)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = int((var * 100) + 40)
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:30:50) 
-- CODE:
var = input("quantidade")
float(100)
float(40)
total = int(var * 100) + 40
print(total)

	

-- OUTPUT:
12121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121252
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:31:12) 
-- CODE:
var = input("quantidade")
float(100)
float(40)
total = int(var * 100) + 40
print(total)

	

-- OUTPUT:
12121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121212121252
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:32:22) 
-- CODE:
var = input("quantidade")
float(100)
float(40)
total = float(int(var * 100) + 40)
print(total)

	

-- OUTPUT:
1.2121212121212121e+199
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:33:08) 
-- CODE:
var = input("quantidade")
float = (100)
float = (40)
total = float(int(var * 100) + 40)
print(total)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = float(int(var * 100) + 40)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:38:55) 
-- CODE:
var = input("jogo: ")
total = float((var * 100) + 40)
print(total)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = float((var * 100) + 40)
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 13:39:37) 
-- CODE:
var = input("jogo: ")
total = float(var * 100 + 40)
print(total)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = float(var * 100 + 40)
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:00:05) 
-- CODE:
var = input("jogo: ")
total = float(var * 100.0 + 40.0)
print(total)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = float(var * 100.0 + 40.0)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:00:29) 
-- CODE:
var = input("jogo: ")
total = input(var * 100.0 + 40.0)
print(total)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = input(var * 100.0 + 40.0)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:00:58) 
-- CODE:
var = input("jogo: ")
total = (var * 100.0) + 40.0
print(total)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = (var * 100.0) + 40.0
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:01:04) 
-- CODE:
var = input("jogo: ")
total = (var * 100.0) + 40.0
print(total)	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total = (var * 100.0) + 40.0
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:09:27) 
-- CODE:
	total = (5* 100.0) + 40.0

-- ERROR:
File "XXXX", line 1
    total = (5* 100.0) + 40.0
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:09:47) 
-- CODE:
5 * 100.0 + 40.0

-- ERROR:
File "XXXX", line 1
    total = (5* 100.0) + 40.0
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:09:53) 
-- CODE:
5 * 100.0 + 40.0

-- ERROR:
File "XXXX", line 1
    total = (5* 100.0) + 40.0
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:10:36) 
-- CODE:
print(5 * 100.0 + 40.0)

-- OUTPUT:
540.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:10:42) 
-- CODE:
print(5 * 100.0 + 40.0)

-- EXECUTION TIME:
0.1524
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
540.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
540.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
540.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:13:52) 
-- CODE:
var = float(input("quantidade: "))
total = float(var * 100.0) + 40,0
print(total)

-- OUTPUT:
(1240.0, 0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:14:13) 
-- CODE:
var = float(input("quantidade: "))
total = float(var * 100.0) + 40,0
print(total)

-- EXECUTION TIME:
0.116468
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
(1240.0, 0)
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
(1040.0, 0)
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
(24640.0, 0)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:14:38) 
-- CODE:
var = float(input("quantidade: "))
total = float(var * 100) + 40
print(total)

-- OUTPUT:
1240.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:14:47) 
-- CODE:
var = float(input("quantidade: "))
total = float(var * 100) + 40
print(total)

-- EXECUTION TIME:
0.17187
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1240.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1040.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
24640.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:16:51) 
-- CODE:
var = float(input("quantidade: "))
varA = float(input("preço: "))
varB = float(input("frete: "))
total = float(var * A) + B

print(total)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = float(var * A) + B
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:17:28) 
-- CODE:
var = float(input("quantidade: "))
var = float(input("preço: "))
var = float(input("frete: "))
total = float(var * var) + var

print(total)

-- OUTPUT:
6162.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:18:58) 
-- CODE:
var = float(input("quantidade:")
float(input("preço: "))
float(input("frete: "))
total = float(var * var) + var

print(total)

-- ERROR:
File "XXXX", line 2
    float(input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:19:35) 
-- CODE:
var = float(input("quantidade:")
input("preço: "))
input("frete: "))
total = float(var * var) + var

print(total)

-- ERROR:
File "XXXX", line 2
    input())
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:20:09) 
-- CODE:
var = float(input("quantidade:")
input("preço: ")
input("frete: ")
total = float(var * var) + var

print(total)

-- ERROR:
File "XXXX", line 2
    input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:21:05) 
-- CODE:
var = float(input("quantidade:")
input(100)
input(40)
total = float(var * var) + var

print(total)

-- ERROR:
File "XXXX", line 2
    input(100)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:21:16) 
-- CODE:
var = float(input("quantidade:")
input(100)
input(40)
total = float(var * var) + var

print(total)

-- ERROR:
File "XXXX", line 2
    input(100)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:22:30) 
-- CODE:
var = float(input("quantidade:")
input(int(100)
input(int(40)
total = float(var * 100) + 40

print(total)

-- ERROR:
File "XXXX", line 2
    input(int(100)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:22:52) 
-- CODE:
var = float(input("quantidade:")
int(100)
int(40)
total = float(var * 100) + 40

print(total)

-- ERROR:
File "XXXX", line 2
    int(100)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:23:34) 
-- CODE:
var = float(input("quantidade:")
int("100")
int("40")
total = float(var * 100) + 40

print(total)

-- ERROR:
File "XXXX", line 2
    int("100")
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:25:28) 
-- CODE:
var = float(input("quantidade:")


-- ERROR:
File "XXXX", line 3
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:26:38) 
-- CODE:
var = float(input("quantidade, preco,frete:")


-- ERROR:
File "XXXX", line 3
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:27:27) 
-- CODE:
var = float(input("quantidade, preco,frete:")
total = float(var * 8) + 45
print(total)
-- ERROR:
File "XXXX", line 2
    total = float(var * 8) + 45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:27:59) 
-- CODE:
var = float(input("quantidade, preco,frete:")
total = float(var)
print(total)
-- ERROR:
File "XXXX", line 2
    total = float(var)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:29:46) 
-- CODE:
var = float(input("quantidade, preco,frete:")
total = float((var * 100) + 40)
print(total)
-- ERROR:
File "XXXX", line 2
    total = float((var * 100) + 40)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:32:50) 
-- CODE:
var = float(input("quantidade:")
total = float((var * 100) + 40)
print(total)
-- ERROR:
File "XXXX", line 2
    total = float((var * 100) + 40)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:33:00) 
-- CODE:
var = float(input("quantidade:")

print(total)
-- ERROR:
File "XXXX", line 3
    print(total)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:33:23) 
-- CODE:
var = float(input("quantidade:")


-- ERROR:
File "XXXX", line 3
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:34:55) 
-- CODE:
var = float(input("quantidade:")
input()
input()
-- ERROR:
File "XXXX", line 2
    input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:37:19) 
-- CODE:
var = float(input("quantidade:")
float(input(100)
float(input(40)
print()				
-- ERROR:
File "XXXX", line 2
    float(input(100)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:37:42) 
-- CODE:
var = float(input("quantidade:")
float(input("100")
float(input("40")
print()				
-- ERROR:
File "XXXX", line 2
    float(input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:38:04) 
-- CODE:
var = float(input("quantidade: ")
float(input("100")
float(input("40")
print()				
-- ERROR:
File "XXXX", line 2
    float(input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:38:08) 
-- CODE:
var = float(input("quantidade: ")
float(input("100")
float(input("40")
print()				
-- ERROR:
File "XXXX", line 2
    float(input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:48:16) 
-- CODE:
var = float(input("quantidade: ")
a = 100
b = 40
print(var * a + b)
-- ERROR:
File "XXXX", line 2
    a = 100
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:48:58) 
-- CODE:
var = float(input("quantidade: ")
a = 100
b = 40
print(var * a + b)
-- ERROR:
File "XXXX", line 2
    a = 100
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:49:43) 
-- CODE:
var = float(input("quantidade: ")
a = (100)
b = (40)
print(var * a + b)
-- ERROR:
File "XXXX", line 2
    a = (100)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:54:41) 
-- CODE:
print(5*100+40)
-- OUTPUT:
540
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:54:56) 
-- CODE:
print(5*100.0+40.0)
-- OUTPUT:
540.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:55:00) 
-- CODE:
print(5*100.0+40.0)
-- EXECUTION TIME:
0.167727
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
540.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
540.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
540.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:57:37) 
-- CODE:
var = float(input("jogo"))
total = (var*100.0+40.0)
print(total)
-- OUTPUT:
1240.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 14:57:47) 
-- CODE:
var = float(input("jogo"))
total = (var*100.0+40.0)
print(total)
-- EXECUTION TIME:
0.165689
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1240.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1040.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
24640.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 14:58:32) 
-- CODE:
var = float(input("jogo,am"))
total = (var*100.0+40.0)
print(total)
-- OUTPUT:
1240.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:07:55) 
-- CODE:
var = float(input("jogo"))
total = (var*100.0+40.0)
print(total)
-- OUTPUT:
1240.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:09:07) 
-- CODE:
var = float(input("jogo"))
total = (var*100.0+40.0)
print(total)
-- EXECUTION TIME:
0.147638
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
1240.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
1040.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
24640.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:09:19) 
-- CODE:
var = float(input("jogo"))
total = (var*100.0+40.0)
print(total)
-- OUTPUT:
1240.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:12:23) 
-- CODE:
var = float(input("jogo"))
valor = input("volor unitario")
frete = input("frete")
total = (var*valor+frete)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = (var*valor+frete)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:13:00) 
-- CODE:
var = float(input("jogo"))
valor = input("volor unitario")
frete = input("frete")
total = ( var * valor + frete )
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = ( var * valor + frete )
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:13:42) 
-- CODE:
var = float(input("jogo"))
valor = input("volor unitario")
frete = input("frete")
total = float(( var * valor + frete ))
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = float(( var * valor + frete ))
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:15:31) 
-- CODE:
var = float(input("jogo"))
valor = input("volor unitario")
frete = input("frete")
total = float((( var * valor) + frete ))
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = float((( var * valor) + frete ))
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:16:00) 
-- CODE:
var = float(input("jogo"))
valor = input("volor unitario")
frete = input("frete")
total = float(( var * valor) + frete )
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = float(( var * valor) + frete )
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:16:46) 
-- CODE:
var = float(input("jogo"))
valor = input("volor unitario")
frete = input("frete")
total = int(( var * valor) + frete )
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = int(( var * valor) + frete )
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:17:45) 
-- CODE:
var = float(input("jogo"))
valor = input("volor unitario")
frete = input("frete")
total = ( var * valor) + frete
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = ( var * valor) + frete
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:19:51) 
-- CODE:
var = float(input("jogo"))
valor = float(input("volor unitario"))
frete = float(input("frete"))
total = float(( var * valor) + frete)
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:20:14) 
-- CODE:
var = float(input("jogo"))
valor = float(input("volor unitario"))
frete = float(input("frete"))
total = float(( var * valor) + frete)
print(total)
-- EXECUTION TIME:
0.133075
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
